--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://ametanishant.github.io/newstack/"
-title = "Geekdocs"
+title = "Koki Jadi Hai"
 theme = "hugo-geekdoc"
 
 pluralizeListTitles = false
