--- a/config.toml
+++ b/config.toml
@@ -1,18 +1,17 @@
 baseURL = "https://ametanishant.github.io/newstack/"
-title = "Koki Jadi Hai"
+title = "Hawkeye-Sre-RunBook"
 theme = "hugo-geekdoc"
 
-pluralizeListTitles = false
-
-# Geekdoc required configuration
+# Geekdoc - Required to get well formatted code blocks
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 disablePathToLower = true
+enableGitInfo = true
 
-# Required if you want to render robots.txt template
-enableRobotsTXT = true
+# Disable pluralized menu titles
+pluralizelisttitles = false
 
-# Needed for mermaid shortcodes
+# Geekdoc - Needed for mermaid shortcodes
 [markup]
   [markup.goldmark.renderer]
     # Needed for mermaid shortcode
@@ -20,7 +19,42 @@ enableRobotsTXT = true
   [markup.tableOfContents]
     startLevel = 1
     endLevel = 9
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = 'monokai'
+    tabWidth = 2
 
-[taxonomies]
-   tag = "tags"
+[params]
+  # --- Custom --- #
+  # Number of seconds to consider a page outdated
+  outdatedsec = 7776000 # 90 days
+
+  # --- Geekdoc --- #
+
+  # (Optional, default none) Set source repository location
+  # Used for 'Edit this page' links
+  # You can also specify this parameter per page in front matter.
+  geekdocRepo = " "
+
+  # (Optional, default none) Enable 'Edit this page' links. Requires 'GeekdocRepo' param
+  # and path must point to 'content' directory of repo.
+  # You can also specify this parameter per page in front matter.
+  geekdocEditPath = "edit/main"
+
+  # (Optional, default true) Enables search function with flexsearch.
+  # Index is built on the fly and might slowdown your website.
+  geekdocSearch = true
+
+  # (Optional, default false) When searching, show the parent page path within
+  # the results
+  geekdocSearchShowParent = true
+
 
